[project]
name = "gamms"
version = "0.1.0"
description = "Graph based Adversarial Multiagent Modelling Simulator"
dependencies = [
    "networkx",
    "shapely",

]

requires = [
    "python>=3.6",
]

authors = ["GAMMS Developers"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gui = [
    "matplotlib",
    "pygame"
]

osm = [
    "osmnx"
]