[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gamms"
version = "0.1.0"
description = "Graph based Adversarial Multiagent Modelling Simulator"
dependencies = [
    "networkx",
    "pygame",
    "shapely",
]

requires = [
    "python>=3.8",
]

authors = ["GAMMS Developers"]

[project.optional-dependencies]
osm = [
    "osmnx"
]
